Fix for promo-header on tablet/phone

--- a/blocks/promo/promo-header/promo-header.css
+++ b/blocks/promo/promo-header/promo-header.css
@@ -20,7 +20,7 @@
 
     display: inline-block;
 
-    margin: 6px 0 0 106px;
+    margin: 6px 0 0 392px;
 }
 
 .promo-header__title
